--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,17 @@
     "license": "MIT",
     "require": {
         "php": ">=7.2",
-        "cakephp/authentication": "2.0",
-        "cakephp/cakephp": "~4.1.0",
+        "cakephp/authentication": "~2.3",
+        "cakephp/cakephp": "~4.2",
         "cakephp/migrations": "^3.0",
-        "cakephp/plugin-installer": "^1.2",
+        "cakephp/plugin-installer": "^1.3",
         "friendsofcake/search": "^6.1",
         "mobiledetect/mobiledetectlib": "^2.8"
     },
     "require-dev": {
         "cakephp/bake": "^2.0.3",
         "cakephp/cakephp-codesniffer": "~4.2.0",
-        "cakephp/debug_kit": "^4.1",
+        "cakephp/debug_kit": "^4.4",
         "josegonzalez/dotenv": "^3.2",
         "phpunit/phpunit": "~8.5.0",
         "psy/psysh": "@stable"
@@ -43,7 +43,6 @@
     "scripts": {
         "post-install-cmd": "App\\Console\\Installer::postInstall",
         "post-create-project-cmd": "App\\Console\\Installer::postInstall",
-        "post-autoload-dump": "Cake\\Composer\\Installer\\PluginInstaller::postAutoloadDump",
         "check": [
             "@test",
             "@cs-check"
@@ -55,6 +54,7 @@
     },
     "prefer-stable": true,
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "vendor-dir": "../vendor"
     }
 }
