--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
-    "name": "cakephp/app",
-    "description": "CakePHP skeleton app",
-    "homepage": "https://cakephp.org",
+    "name": "irohasoft/irohaboard2",
+    "description": "iroha Board",
+    "homepage": "http://irohaboard.irohasoft.jp/",
     "type": "project",
-    "license": "MIT",
+    "license": "GPLv3",
     "require": {
         "php": ">=7.2",
         "cakephp/authentication": "~2.3",
         "cakephp/cakephp": "~4.2",
         "cakephp/migrations": "^3.0",
-        "cakephp/plugin-installer": "^1.3",
-        "friendsofcake/search": "^6.1",
+        "cakephp/plugin-installer": "^1.2",
+        "friendsofcake/search": "^6.2",
         "mobiledetect/mobiledetectlib": "^2.8"
     },
     "require-dev": {
