--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "cakephp/migrations": "^3.0",
         "cakephp/plugin-installer": "^1.2",
         "friendsofcake/search": "^6.2",
-        "mobiledetect/mobiledetectlib": "^2.8"
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "composer/composer": "^2.2.12"
     },
     "require-dev": {
         "cakephp/bake": "^2.0.3",
