--- a/composer.json
+++ b/composer.json
@@ -6,18 +6,12 @@
     "license": "GPLv3",
     "require": {
         "php": ">=7.4",
-        "cakephp/authentication": "~2.3",
+        "cakephp/authentication": "~2.9",
         "cakephp/cakephp": "~4.4",
-        "cakephp/migrations": "^3.5",
-        "cakephp/plugin-installer": "^1.3",
-        "friendsofcake/search": "^6.2",
-        "mobiledetect/mobiledetectlib": "^2.8",
-        "composer/composer": "^2.3"
+        "friendsofcake/search": "^6.2"
     },
     "require-dev": {
-        "cakephp/bake": "^2.7",
-        "cakephp/debug_kit": "^4.8",
-        "psy/psysh": "@stable"
+        "cakephp/debug_kit": "^4.9"
     },
     "autoload": {
         "psr-4": {
